# shannon_message

./: .gitignore  CMakeLists.txt  README.md  compile.bat  compile.sh  env-config.cmake
cmake/modules/: ShannonCommon.cmake
shannon/message/: CMakeLists.txt  async_client.cpp  async_client.h  client.hpp  client_base.cpp  client_base.h  client_non_sequence_impl.hpp  client_sequence_impl.hpp  data_struct.h  data_type.h  instance_container.hpp  observer.hpp  server.hpp  server_base.cpp  server_base.h  server_non_sequence_impl.hpp  server_sequence_impl.hpp  unified_send_fun.cpp  unified_send_fun.h
shannon/message/helper/: console_client_initializer.hpp  console_struct.h  subscribe_client.hpp  subscribe_forwarder.hpp  subscribe_observer.cpp  subscribe_observer.h  subscribe_quick_forwarder.hpp  subscribe_struct.h
shannon_message_demo/: CMakeLists.txt  binary_logger.hpp  binary_logger_util.cpp  binary_logger_util.h  demo-client.cpp  demo-console-client.cpp  demo-console-datastruct.h  demo-message-datastruct.h  demo-server-forwarders-quick.h  demo-server-forwarders.h  demo-server-quick.cpp  demo-server.cpp
